# LibreChat

./: .babelrc  .branding.md  .codeql-config.yml  .coderabbit.yaml  .cursorignore  .deploy.sh  .dockerignore  .editorconfig  .env  .env.apro.example  .env.backup  .env.e2e.example  .env.example  .env.image-version  .env.local  .env.production.example  .envrc  .eslintrc.js  .gcloudignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitmodules  .gitpod.yml  .gsd  .hintrc  .initialize_librechat  .librechat_token  .n8n  .n8n2  .node-version  .npmrc  .paychex.dockerignore  .prettierignore  .prettierrc  .prettierrc.cjs  .prettierrc.js  .replit  .rh-pre-commit.yaml  (+464 more)
.claude/: settings.json
.devcontainer/: .env.example  .gitignore  Dockerfile  README.md  devcontainer.json  docker-compose.yml  env.template  post-create.sh
.devcontainer-old/: Dockerfile  docker-compose.yml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  LICENSE.md  README.md  SECURITY.md  TRANSLATION.md  backend-review.yml  configuration-release.json  configuration-unreleased.json  configuration.json  dependabot.yml  frontend-review.yml  playwright.yml  pull_request_template.md
.github_old/: CONTRIBUTING.md
.husky/: lint-staged.config.js  pre-commit
.jenkins/: Jenkinsfile.cd  branch-name-verification.groovy
.planning/: ROADMAP.md
.specstory/: .what-is-this.md
admin/: index.html  jest.config.js  package.json  postcss.config.js  (+2 more)
admin-frontend/: index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.js
(+8731 files in other folders)
